# FoodBase-app

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  middleware.py
app/api/v1/foodbase/: __init__.py  models.py
app/common/: models.py
app/core/: config.py  db.py
resources/sql/: setup.sql  test.sql
resources/sql/queries/: foodbase.sql
