[tool.poetry]
name = "food-app"
version = "0.1.0"
description = ""
authors = ["(Kelvin) Chun Kit Cho <kc007919@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.4"
requests = "^2.32.3"
pugsql = "^0.3.0"
python-keycloak = "^4.2.2"
psycopg = "^3.2.1"
structlog = "^24.4.0"
asgi-correlation-id = "^4.3.1"
alembic = "^1.13.2"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"